# sps_plot

./: .gitignore  Cargo.toml  README.md  index.html  sps_plot-389acd7b7b92e9a6.js  sps_plot-67beb77b407cad9f.js  sps_plot-aa69dea2ee486461.js  sps_plot-b9693e3b5d49d62b.js  sps_plot.js  sw.js
.github/workflows/: rust.yml
nndc_excitation_level_getter/: Cargo.toml  nndc_excitation_levels_06202024.csv
nndc_excitation_level_getter/src/: excitation_fetcher.rs  lib.rs  main.rs  nuclear_data_amdc_2016.rs
src/: app.rs  excitation_fetchor.rs  excitation_levels_nndc.rs  lib.rs  main.rs  nuclear_data.rs  nuclear_data_amdc_2016.rs  web_app.rs
