[package]
name = "sps_plot"
version = "0.1.0"
authors = ["Alex Conley <imaconley1@gmail.com>"]
edition = "2021"
rust-version = "1.72"

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

egui_plot = { version = "0.27.2", features = ["serde"] }
egui_extras = "0.27.2"

# Conditional dependencies for native and wasm targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
rfd = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
